# scarf

./: .gitignore  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  MANIFEST.ini  README.rst  codecov.yml  push_pypi.sh  pyproject.toml  requirements.txt  requirements_extra.txt  setup.py
.circleci/: config.yml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  pytest.yml  python-publish.yml
docs/: Makefile  build_docs.sh
docs/source/: api.md  api.rst  colab.md  conf.py  contributions.md  contributors.rst  datasets.rst  examples.rst  faq.md  faq.rst  genindex.rst  index.md  index.rst  install.md  install.rst  license.md  logos.rst  requirements.txt  toctree.yml  vignettes.md  vignettes.rst
docs/source/_static/: style.css  styles.css
docs/source/_templates/: layout.html
docs/source/vignettes/: README.md  mnist.md  (+23 more)
scarf/: __init__.py  ann.py  assay.py  balanced_cut.py  bio_data.py  datastore.py  dendrogram.py  doublet_scoring.py  downloader.py  feat_utils.py  harmony.py  knn_utils.py  logging_utils.py  mapper.py  mapping_utils.py  markers.py  meld_assay.py  merge.py  metadata.py  metrics.py  pcst.py  plots.py  readers.py  umap.py  utils.py  writers.py
scarf/datastore/: base_datastore.py  datastore.py  graph_datastore.py  mapping_datastore.py
scarf/tests/: __init__.py  conftest.py  fixtures_datastore.py  fixtures_downloader.py  fixtures_readers.py  requirements.txt  test_datastore.py  test_downloader.py  test_merger.py  test_metadata.py  test_metrics.py  test_misc.py  test_readers.py  test_writers.py
src/: ann.py  datastore.py  knn_utils.py  mapping_utils.py  metadata.py  pcst.py  writers.py
tests/: test_readh5.py
vignettes/: atac_basic_tutorial.md  basic_tutorial.md  basic_tutorial_scATACseq.md  convert_to_notebook.bash  downloading_datasets.md  sample_integration.md  sample_integration_tutorial.md  topacedo_downsampling.md
vignettes/pbmc_10k_citeseq/: README.md
(+24 files in other folders)
